# WordRememberingPam

./: CMakeLists.txt  README.md  main.c  word_db.c  word_db.h
